# ml-ui-wissen

./: README.md  app.py  config.json  pyproject.toml
c++/: model  model.cpp
src/ml_ui_wissen/: __init__.py
static/: style.css
templates/: index.html
